@@ -26,3 +26,5 @@
 </header>
 
 <%= render "table", table_presenter: @page, resources: @resources %>
+
+<%= paginate @resources %>
