@@ -1,4 +1,7 @@
 * Improvement: Implement searching over string and email attributes
+* Improvement: Add pagination to index views
+  * Customizable by overriding `Admin::ApplicationController#records_per_page`
+  * Customizable through HTTP param `per_page`
 * Improvement: Generate resource-specific controller subclasses.
 * UI: Remove logo from the sidebar
 * Bug Fix: Fix an bug where `nil` in a string field would cause a 500 error.
